--- a/Iskender.html
+++ b/Iskender.html
@@ -4,34 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recepten | Lahmacun</title>
+    <title>Recepten | Iskender</title>
 </head>
 <body>
-    <h1>Lahmacun</h1>
+    <h1>Iskender</h1>
     <ul>
         <li><a href="index.html">Lahmacun</a></li>
         <li><a href="Iskender.html">Iskender</a></li>
         <li><a href="dolma.html">Biber Dolma</a></li>
     </ul>
     
-    <img src="images/turkish-pizza-also-known-as-lahmacun-view-with-vegetables-vintage-wooden-table_627567-429.jpg" width="40%">
+    <img src="images/iskender.jpg" width="40%">
 
     <h2>Ingredienten</h2>
     <ul>
-        <li>500g bloem</li>
-        <li>zout</li>
-        <li>kristalsuikereen snuif</li>
-        <li>arachideolieeen scheutje</li>
-        <li>droge gist 1 zakje</li> 
-        <li>Griekse yoghurt 2 eetlepels</li>
-        <li>lauw water 240ml</li>
-        <li>1 ajuin</li>
+        <li>500g kalfsvlees</li>
+        <li>2 groene pepers</li>
+        <li>2 lepels zonnebloemolie</li>
+        <li>3 theelepels zout </li>
+        <li>2 theelepels peper </li>
+        <li>5 teentjes knoflook</li> 
+        <li>halve turks brood</li>
+        <li>50g Roomboter</li>
+        <li>1 ui</li>
+        <li>peterselie</li>
     </ul>
 
     <h2>Bereiding</h2>
     <ol>
-        <li>Meng de bloem met een snuif zout en een snuif suiker. Doe er een scheutje arachideolie, het zakje droge gist en de yoghurt bij.</li>
-        <li>Kneed het er lauwe water door. Laat de machine lang genoeg draaien.</li>
+        <li>begin met het snijden van het vlees in hele dunne plakjes</li>
+        <li>snijd de ui door midden en in kleine dunne stukjes</li>
         <li>Bestuif de bol deeg en de kom met wat bloem. Doe er een vel plasticfolie over.</li>
         <li>Laat het 1 uur rijzen op een warme plaats.</li>
         <li>
